@@ -314,6 +314,7 @@ extern int (*lcd_menu)(const char **, unsigned, unsigned);
 #define VAR_NET								1
 #define VAR_DHCP								2
 #define VAR_INITRD							3
+#define VAR_NETCON							4
 
 extern int env_put(const char *, const char *, unsigned);
 extern const char *env_get(const char *, int);
@@ -353,6 +354,12 @@ extern struct nv_store nv_store;
 
 extern void nv_get(int);
 extern void nv_put(void);
+
+/* netcon.c */
+
+extern int netcon_poll(void);
+extern unsigned netcon_read(void *, unsigned);
+extern unsigned netcon_write(const void *, unsigned);
 
 #endif
 
