@@ -3,6 +3,9 @@
 CoLo 1.18 (xxxx-xx-xx)
 ----------------------
 
+*	Added UDP network console support. This adds a 'netcon' command and
+	associated variables, and a new boot menu item "Network Shell".
+
 CoLo 1.17 (2005-02-20)
 ----------------------
 
